--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.3.1"
+    "vite": "^6.3.1",
+    "vite-svg-loader": "^5.1.0"
   }
 }
