--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "vite": "^6.3.1",
+    "vite-plugin-pwa": "^1.0.3",
     "vite-svg-loader": "^5.1.0"
   }
 }
